Stanford Sites System Tools x.x-x.x, xxxx-xx-xx
-----------------------------------------------

Stanford Sites System Tools 7.x-1.2, 2014-11-05
-----------------------------------------------
by jbickar:
  -Do not allow ERUS module to be enabled

Stanford Sites System Tools 7.x-1.1, 2014-03-31
-----------------------------------------------
by jbickar:
  -Block users from saving Features directly to disk
  -Do not allow PHP module to be enabled

Stanford Sites System Tools 7.x-1.1-beta1, 2013-03-28
-----------------------------------------------------
by jbickar: change order in which the form_alter runs on the admin/modules page, so that modules
  such as module_filter do not override our alter

Stanford Sites System Tools 7.x-1.0-beta2, 2012-09-10
-----------------------------------------------------
by mrmarco: Added additional checks for Backup and Migrate destinations

Stanford Sites System Tools 7.x-1.0-beta1, 2012-08-21
-----------------------------------------------------
by jbickar: prevent users from choosing a Backup and Migrate destination outside
  of Drupal directory

Stanford Sites System Tools 7.x-1.0-alpha5, 2012-07-05
------------------------------------------------------
changes since -alpha5:
  -fixed "undefined index" error message when enabling modules with dependencies

Stanford Sites System Tools 7.x-1.0-alpha4, 2012-06-21
------------------------------------------------------
changes since -alpha3:
  -removed the ability to enable the Update Status module 
    (preventing users from downloading/updating modules via the UI)
  -bug fix for error message when changing from public to private file handling

Stanford Sites System Tools 7.x-1.0-alpha3, 2012-04-13
------------------------------------------------------
-no functional changes, just fixing a version labeling mismatch

Stanford Sites System Tools 7.x-1.0-alpha2, 2012-04-05
------------------------------------------------------
-changed name of module to stanford_sites_systemtools