@@ -1,6 +1,10 @@
 Stanford Sites System Tools x.x-x.x, xxxx-xx-xx
 -----------------------------------------------
 
+Stanford Sites System Tools 7.x-1.3, 2016-11-16
+-----------------------------------------------
+- Fixed bug that was allowing incorrect Backup and Migrate destinations and file system paths to be set.
+
 Stanford Sites System Tools 7.x-1.2, 2014-11-05
 -----------------------------------------------
 by jbickar:
